--- a/RandomQuoteGenerator/index.html
+++ b/RandomQuoteGenerator/index.html
@@ -9,6 +9,17 @@
     <script src="index.js"></script>
 </head>
 <body>
-    
+    <title> Greatest Boxing Quotes Ever - freeCodecamp</title>
+<h1 style="font-family:verdana;text-align:center;">Greatest Boxing Quotes Ever </h1>
+<div class=container>  
+  <div id="quoteDisplay">
+    <!--quotes here-->
+  </div>
+  </div>  
+<button onclick="newQuote()"> Click Me For Quotes</button>  
+  
+<div class=footer>  
+<p>Quotes Taken From Several Sources And Websites &mdash; For Educational Purposes Only &mdash; Copyright Sanchit &copy; 2017</p>  
+</div>
 </body>
 </html>
