Updated The Project Files

--- a/RandomQuoteGenerator/index.html
+++ b/RandomQuoteGenerator/index.html
@@ -1,25 +1,36 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Random Quote Generator Project</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
-    <script src="index.js"></script>
-</head>
-<body>
-    <title> Greatest Boxing Quotes Ever - freeCodecamp</title>
-<h1 style="font-family:verdana;text-align:center;">Greatest Boxing Quotes Ever </h1>
-<div class=container>  
-  <div id="quoteDisplay">
-    <!--quotes here-->
-  </div>
-  </div>  
-<button onclick="newQuote()"> Click Me For Quotes</button>  
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  </head>
   
-<div class=footer>  
-<p>Quotes Taken From Several Sources And Websites &mdash; For Educational Purposes Only &mdash; Copyright Sanchit &copy; 2017</p>  
-</div>
-</body>
+  <body>
+    <div class="info">
+    <h1>Random Quote Generator Project</h1>
+    <h5>Quotes By The Boxers</h5>
+    </div>
+
+
+    <div class="content">  
+    <div id="quote">   
+    </div>
+    </div>  
+    <button onclick="newQuote()">Click Here For Quotes</button>  
+  
+    <footer> 
+    <em>Quotes Taken From Several Sources For Educational Purposes Only<em> 
+    </footer>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
 </html>
