--- a/RandomQuoteGenerator/index.html
+++ b/RandomQuoteGenerator/index.html
@@ -12,20 +12,22 @@
   
   <body>
     <div class="info">
-    <h1>Random Quote Generator Project</h1>
-    <h5>Quotes By The Boxers</h5>
-    </div>
+<h1>Random Quote Generator Project</h1>
+<h5>Quotes By The Boxers</h5>
+</div>
 
+<button onclick="newQuote()">Click Here For Quotes</button>  
 
-    <div class="content">  
-    <div id="quote">   
-    </div>
-    </div>  
-    <button onclick="newQuote()">Click Here For Quotes</button>  
+<div class="content">  
+  <div id="quote">    <!--quotes here-->
+  </div>
+  <div id="person">
+  </div> 
+</div>  
   
-    <footer> 
-    <em>Quotes Taken From Several Sources For Educational Purposes Only<em> 
-    </footer>
+<footer> 
+<em>Quotes Taken From Several Sources For Educational Purposes Only<em> 
+</footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
