--- a/JavaScriptCalculator/index.html
+++ b/JavaScriptCalculator/index.html
@@ -1,13 +1,26 @@
-<br><h1>JavaScript Calculator</h1>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylsheet" href="index.css">
+    <script src="index.js"><</script>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  </head>
+
+    <body>
+        <h1>JavaScript Calculator</h1>
   <div id='calc'>
 <form>
   <input type='text' id='display' disabled><br>
-  <input type='button' id='key' value='C' onclick='addtoscreen("C")'>
+  <input type='button' id='key' value='C' onclick='addtoscreen("c")'>
   <input type='button' id='key' value='CE' onclick='backspace()'>
   <input type='button' id='key' value='x^2' onclick='power()'>
   <input type='button' id='key' value='+' onclick='addtoscreen("+")'><br>
  
- <input type='button' value='9' id='key' onclick='addtoscreen("c")'>
+ <input type='button' value='9' id='key' onclick='addtoscreen("9")'>
   <input type='button' value='8' id='key' onclick='addtoscreen("8")'>
   <input type='button' value='7' id='key' onclick='addtoscreen("7")'>
   <input type='button' value='-' id='key' onclick='addtoscreen("-")'><br>
@@ -29,3 +42,12 @@
 </form><br>
     <h3>Calculator - HTML CSS JS</h3>
 </div>
+IG
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
+</html>
